k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: intensicare
  labels:
    app.kubernetes.io/name: intensicare
    app.kubernetes.io/part-of: intensicare-platform
